[tool.poetry]
name = "tasks"
version = "0.1.0"
description = "Collection of solutions to test problems"
authors = ["BuGalter <wardoc78@gmail.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pylint = "^2.6.2"
mypy = "^0.812"
pydocstyle = "^5.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
